<resources>
    <string name="app_name">RPN Calculator</string>

    <!-- screen -->
    <string name="stack4">4:</string>
    <string name="stack3">3:</string>
    <string name="stack2">2:</string>
    <string name="stack1">1:</string>

    <!-- pad -->
    <string name="undo">UNDO</string>
    <string name="drop">DROP</string>
    <string name="swap">SWAP</string>
    <string name="del">DEL</string>
    <string name="clear">AC</string>

    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="power">PWR</string>
    <string name="sqrt">√</string>

    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>

    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="settings">⚙</string>
    <string name="num0">0</string>
    <string name="dot">∙</string>
    <string name="changeSign">±</string>
    <string name="enter">ENTER</string>

    <!-- settings-->
    <string name="numberPrecision">Number precision</string>
    <string name="screenColor">Screen color</string>
    <string name="specialButtonColor">Special button color</string>
    <string name="normalButtonColor">Normal button color</string>
    <string name="save">Save</string>

    <!-- options -->
    <string-array name="precision">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="color">
        <item>Dim Gray</item>
        <item>Dark Slate Gray</item>
        <item>Purple</item>
        <item>Android Green</item>
        <item>Brown Sugar</item>
        <item>Madder Lake</item>
        <item>Light Salmon</item>
    </string-array>
</resources>